fixed reroll before fetching new games

--- a/components/Game.module.scss
+++ b/components/Game.module.scss
@@ -9,9 +9,13 @@
     transform: scale(1);
 }
 
-.gameImg {
+.game__img, .game__placeholder {
     width: auto;
     height: 100%;
     object-fit: contain;
+}
+
+.game__placeholder {
+    background-color: blue;
 }
 
